hamonpy/hamonpy/generated/antlr/hamonParser.py
# Generated from hamonParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class hamonParser ( Parser ):

    grammarFileName = "hamonParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "'|'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'@meter:'", "'@key:'", "'@scale:'", "'@'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'('", "')'", "'['", "']'", "':'", "'/'", 
                     "'-'", "'->'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'\\U0001D12B'", "<INVALID>", "'\\u0394'", "'\\u00B0'", 
                     "'\\u00F8'", "'+'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'T'", "'S'", 
                     "'D'", "'PD'", "'SD'", "'DD'" ]

    symbolicNames = [ "<INVALID>", "COMMA", "PIPE", "EOL", "WS", "VERSION_DECL", 
                      "METER_DECL", "KEY_DECL", "SCALE_DECL", "AT", "MEAS", 
                      "TS", "TABS", "SECS", "REF", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "COLON", "SLASH", "DASH", "ARROW", "QUOTED_TEXT", 
                      "NOCHORD", "SYSTEM_ID", "NOTE", "SHARP", "FLAT", "DBLSHARP", 
                      "DBLFLAT", "NATURAL", "DELTA", "DEGREE", "HALF_DIM", 
                      "PLUS", "LAYERTAG", "MODE", "MAJ", "MIN", "DIM", "AUG", 
                      "ADD", "OMIT", "NO", "SUS", "T", "S", "D", "PD", "SD", 
                      "DD", "ROMAN", "ROMAN_DIM", "INT", "WORD", "OTHER" ]

    RULE_start = 0
    RULE_line = 1
    RULE_versionDecl = 2
    RULE_systemDecl = 3
    RULE_harmonyGroup = 4
    RULE_positionItem = 5
    RULE_harmonyList = 6
    RULE_harmony = 7
    RULE_harmonyAtom = 8
    RULE_layerTag = 9
    RULE_analysisAttr = 10
    RULE_attrItem = 11
    RULE_noChord = 12
    RULE_functionalHarmony = 13
    RULE_funcToken = 14
    RULE_funcSingleToken = 15
    RULE_meterDecl = 16
    RULE_keyDecl = 17
    RULE_keyTarget = 18
    RULE_modeSuffix = 19
    RULE_scaleDecl = 20
    RULE_scaleName = 21
    RULE_chordSymbol = 22
    RULE_pitch = 23
    RULE_accidental = 24
    RULE_slashBass = 25
    RULE_chordPart = 26
    RULE_qualityMark = 27
    RULE_seventhMark = 28
    RULE_extension = 29
    RULE_alteration = 30
    RULE_addOmitSus = 31
    RULE_parenGroup = 32
    RULE_parenItem = 33
    RULE_romanNumeral = 34
    RULE_rnAccidental = 35
    RULE_rnTail = 36
    RULE_rnSecondary = 37
    RULE_numberHarmony = 38
    RULE_numberTail = 39
    RULE_numberSecondary = 40
    RULE_textLabel = 41
    RULE_rawRun = 42
    RULE_rawAtom = 43

    ruleNames =  [ "start", "line", "versionDecl", "systemDecl", "harmonyGroup", 
                   "positionItem", "harmonyList", "harmony", "harmonyAtom", 
                   "layerTag", "analysisAttr", "attrItem", "noChord", "functionalHarmony", 
                   "funcToken", "funcSingleToken", "meterDecl", "keyDecl", 
                   "keyTarget", "modeSuffix", "scaleDecl", "scaleName", 
                   "chordSymbol", "pitch", "accidental", "slashBass", "chordPart", 
                   "qualityMark", "seventhMark", "extension", "alteration", 
                   "addOmitSus", "parenGroup", "parenItem", "romanNumeral", 
                   "rnAccidental", "rnTail", "rnSecondary", "numberHarmony", 
                   "numberTail", "numberSecondary", "textLabel", "rawRun", 
                   "rawAtom" ]

    EOF = Token.EOF
    COMMA=1
    PIPE=2
    EOL=3
    WS=4
    VERSION_DECL=5
    METER_DECL=6
    KEY_DECL=7
    SCALE_DECL=8
    AT=9
    MEAS=10
    TS=11
    TABS=12
    SECS=13
    REF=14
    LPAREN=15
    RPAREN=16
    LBRACK=17
    RBRACK=18
    COLON=19
    SLASH=20
    DASH=21
    ARROW=22
    QUOTED_TEXT=23
    NOCHORD=24
    SYSTEM_ID=25
    NOTE=26
    SHARP=27
    FLAT=28
    DBLSHARP=29
    DBLFLAT=30
    NATURAL=31
    DELTA=32
    DEGREE=33
    HALF_DIM=34
    PLUS=35
    LAYERTAG=36
    MODE=37
    MAJ=38
    MIN=39
    DIM=40
    AUG=41
    ADD=42
    OMIT=43
    NO=44
    SUS=45
    T=46
    S=47
    D=48
    PD=49
    SD=50
    DD=51
    ROMAN=52
    ROMAN_DIM=53
    INT=54
    WORD=55
    OTHER=56

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def line(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(hamonParser.LineContext)
            else:
                return self.getTypedRuleContext(hamonParser.LineContext,i)


        def EOF(self):
            return self.getToken(hamonParser.EOF, 0)

        def versionDecl(self):
            return self.getTypedRuleContext(hamonParser.VersionDeclContext,0)


        def EOL(self, i:int=None):
            if i is None:
                return self.getTokens(hamonParser.EOL)
            else:
                return self.getToken(hamonParser.EOL, i)

        def systemDecl(self):
            return self.getTypedRuleContext(hamonParser.SystemDeclContext,0)


        def getRuleIndex(self):
            return hamonParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = hamonParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 88
                self.versionDecl()


            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 91
                    self.match(hamonParser.EOL) 
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 97
                self.systemDecl()


            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 100
                self.match(hamonParser.EOL)
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 106
            self.line()
            self.state = 115
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 108 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 107
                        self.match(hamonParser.EOL)
                        self.state = 110 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==3):
                            break

                    self.state = 112
                    self.line() 
                self.state = 117
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 121
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==3:
                self.state = 118
                self.match(hamonParser.EOL)
                self.state = 123
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 124
            self.match(hamonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def meterDecl(self):
            return self.getTypedRuleContext(hamonParser.MeterDeclContext,0)


        def keyDecl(self):
            return self.getTypedRuleContext(hamonParser.KeyDeclContext,0)


        def scaleDecl(self):
            return self.getTypedRuleContext(hamonParser.ScaleDeclContext,0)


        def harmonyGroup(self):
            return self.getTypedRuleContext(hamonParser.HarmonyGroupContext,0)


        def getRuleIndex(self):
            return hamonParser.RULE_line

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLine" ):
                listener.enterLine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLine" ):
                listener.exitLine(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLine" ):
                return visitor.visitLine(self)
            else:
                return visitor.visitChildren(self)




    def line(self):

        localctx = hamonParser.LineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_line)
        try:
            self.state = 130
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.meterDecl()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.keyDecl()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.scaleDecl()
                pass
            elif token in [10, 11, 12, 13, 14, 15, 16, 19, 20, 21, 23, 24, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56]:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.harmonyGroup()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION_DECL(self):
            return self.getToken(hamonParser.VERSION_DECL, 0)

        def getRuleIndex(self):
            return hamonParser.RULE_versionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersionDecl" ):
                listener.enterVersionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersionDecl" ):
                listener.exitVersionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVersionDecl" ):
                return visitor.visitVersionDecl(self)
            else:
                return visitor.visitChildren(self)




    def versionDecl(self):

        localctx = hamonParser.VersionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_versionDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(hamonParser.VERSION_DECL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SystemDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(hamonParser.AT, 0)

        def SYSTEM_ID(self):
            return self.getToken(hamonParser.SYSTEM_ID, 0)

        def getRuleIndex(self):
            return hamonParser.RULE_systemDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSystemDecl" ):
                listener.enterSystemDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSystemDecl" ):
                listener.exitSystemDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSystemDecl" ):
                return visitor.visitSystemDecl(self)
            else:
                return visitor.visitChildren(self)




    def systemDecl(self):

        localctx = hamonParser.SystemDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_systemDecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(hamonParser.AT)
            self.state = 135
            self.match(hamonParser.SYSTEM_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HarmonyGroupContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def harmonyList(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(hamonParser.HarmonyListContext)
            else:
                return self.getTypedRuleContext(hamonParser.HarmonyListContext,i)


        def positionItem(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(hamonParser.PositionItemContext)
            else:
                return self.getTypedRuleContext(hamonParser.PositionItemContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(hamonParser.COMMA)
            else:
                return self.getToken(hamonParser.COMMA, i)

        def PIPE(self, i:int=None):
            if i is None:
                return self.getTokens(hamonParser.PIPE)
            else:
                return self.getToken(hamonParser.PIPE, i)

        def getRuleIndex(self):
            return hamonParser.RULE_harmonyGroup

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHarmonyGroup" ):
                listener.enterHarmonyGroup(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHarmonyGroup" ):
                listener.exitHarmonyGroup(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHarmonyGroup" ):
                return visitor.visitHarmonyGroup(self)
            else:
                return visitor.visitChildren(self)




    def harmonyGroup(self):

        localctx = hamonParser.HarmonyGroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_harmonyGroup)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 31744) != 0):
                self.state = 137
                self.positionItem()
                self.state = 138
                self.match(hamonParser.COMMA)
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 145
            self.harmonyList()
            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 146
                self.match(hamonParser.PIPE)
                self.state = 147
                self.harmonyList()
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PositionItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MEAS(self):
            return self.getToken(hamonParser.MEAS, 0)

        def TS(self):
            return self.getToken(hamonParser.TS, 0)

        def TABS(self):
            return self.getToken(hamonParser.TABS, 0)

        def SECS(self):
            return self.getToken(hamonParser.SECS, 0)

        def REF(self):
            return self.getToken(hamonParser.REF, 0)

        def getRuleIndex(self):
            return hamonParser.RULE_positionItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPositionItem" ):
                listener.enterPositionItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPositionItem" ):
                listener.exitPositionItem(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPositionItem" ):
                return visitor.visitPositionItem(self)
            else:
                return visitor.visitChildren(self)




    def positionItem(self):

        localctx = hamonParser.PositionItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_positionItem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 31744) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HarmonyListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def harmony(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(hamonParser.HarmonyContext)
            else:
                return self.getTypedRuleContext(hamonParser.HarmonyContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(hamonParser.COMMA)
            else:
                return self.getToken(hamonParser.COMMA, i)

        def getRuleIndex(self):
            return hamonParser.RULE_harmonyList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHarmonyList" ):
                listener.enterHarmonyList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHarmonyList" ):
                listener.exitHarmonyList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHarmonyList" ):
                return visitor.visitHarmonyList(self)
            else:
                return visitor.visitChildren(self)




    def harmonyList(self):

        localctx = hamonParser.HarmonyListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_harmonyList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.harmony()
            self.state = 160
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 156
                self.match(hamonParser.COMMA)
                self.state = 157
                self.harmony()
                self.state = 162
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HarmonyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def harmonyAtom(self):
            return self.getTypedRuleContext(hamonParser.HarmonyAtomContext,0)


        def layerTag(self):
            return self.getTypedRuleContext(hamonParser.LayerTagContext,0)


        def analysisAttr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(hamonParser.AnalysisAttrContext)
            else:
                return self.getTypedRuleContext(hamonParser.AnalysisAttrContext,i)


        def getRuleIndex(self):
            return hamonParser.RULE_harmony

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHarmony" ):
                listener.enterHarmony(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHarmony" ):
                listener.exitHarmony(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHarmony" ):
                return visitor.visitHarmony(self)
            else:
                return visitor.visitChildren(self)




    def harmony(self):

        localctx = hamonParser.HarmonyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_harmony)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 163
                self.layerTag()


            self.state = 166
            self.harmonyAtom()
            self.state = 170
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==17:
                self.state = 167
                self.analysisAttr()
                self.state = 172
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HarmonyAtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def noChord(self):
            return self.getTypedRuleContext(hamonParser.NoChordContext,0)


        def functionalHarmony(self):
            return self.getTypedRuleContext(hamonParser.FunctionalHarmonyContext,0)


        def chordSymbol(self):
            return self.getTypedRuleContext(hamonParser.ChordSymbolContext,0)


        def romanNumeral(self):
            return self.getTypedRuleContext(hamonParser.RomanNumeralContext,0)


        def numberHarmony(self):
            return self.getTypedRuleContext(hamonParser.NumberHarmonyContext,0)


        def textLabel(self):
            return self.getTypedRuleContext(hamonParser.TextLabelContext,0)


        def getRuleIndex(self):
            return hamonParser.RULE_harmonyAtom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterHarmonyAtom" ):
                listener.enterHarmonyAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitHarmonyAtom" ):
                listener.exitHarmonyAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHarmonyAtom" ):
                return visitor.visitHarmonyAtom(self)
            else:
                return visitor.visitChildren(self)




    def harmonyAtom(self):

        localctx = hamonParser.HarmonyAtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_harmonyAtom)
        try:
            self.state = 179
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.noChord()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.functionalHarmony()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 175
                self.chordSymbol()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 176
                self.romanNumeral()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 177
                self.numberHarmony()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 178
                self.textLabel()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LayerTagContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LAYERTAG(self):
            return self.getToken(hamonParser.LAYERTAG, 0)

        def getRuleIndex(self):
            return hamonParser.RULE_layerTag

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLayerTag" ):
                listener.enterLayerTag(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLayerTag" ):
                listener.exitLayerTag(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLayerTag" ):
                return visitor.visitLayerTag(self)
            else:
                return visitor.visitChildren(self)




    def layerTag(self):
